# rust_bazel_opengl

./: .1.swp  .BUILD.bazel.swp  .Cargo.lock.swp  .Cargo.toml.swp  .WORKSPACE.swp  .requirements.txt.swp  .swo  .swp  :w  BUILD.bazel  Cargo.toml  WORKSPACE  bazel-Galaga  bazel-bin  bazel-out  bazel-testlogs  requirements.txt
assets/: .BUILD.bazel.swl  .BUILD.bazel.swm  .BUILD.bazel.swn  .BUILD.bazel.swo  .BUILD.bazel.swp  .asset.rs.swp  .asset_index.py.swp  .gen_assets.py.swl  .gen_assets.py.swm  .gen_assets.py.swn  .gen_assets.py.swo  .gen_assets.py.swo.swp  .gen_assets.py.swp  .img_loader.py.swp  .rust_generator.py.swp  BUILD.bazel  asset.rs  gen_assets.py  img_loader.py
assets/image/Infernus_Tiles/Building_Infernus_1/: .Adorn_1.png.swp
assets/index/: .asset_index.py.swp  .asset_index.rs.swp  asset_index.py  asset_index.rs
assets_go/: .BUILD.bazel.swp  .asset_gen.go.swp  .go.mod.swp  BUILD.bazel  go.mod
assets_go/generator/: .BUILD.bazel.swp  .go.mod.swp  BUILD.bazel
cargo/: .BUILD.bazel.swp  BUILD.bazel  crates.bzl
cargo/remote/: BUILD.ab_glyph-0.2.21.bazel  BUILD.ab_glyph_rasterizer-0.1.8.bazel  BUILD.android-activity-0.4.1.bazel  BUILD.android-properties-0.2.2.bazel  BUILD.arrayvec-0.7.4.bazel  BUILD.block-sys-0.1.0-beta.1.bazel  BUILD.block2-0.2.0-alpha.6.bazel  BUILD.bumpalo-3.13.0.bazel  BUILD.calloop-0.10.6.bazel  BUILD.cc-1.0.79.bazel  BUILD.cfg_aliases-0.1.1.bazel  BUILD.cgl-0.3.2.bazel  BUILD.core-foundation-0.9.3.bazel  BUILD.core-foundation-sys-0.8.4.bazel  BUILD.core-graphics-0.22.3.bazel  BUILD.core-graphics-types-0.1.2.bazel  BUILD.dlib-0.5.2.bazel  BUILD.downcast-rs-1.2.0.bazel  BUILD.fdeflate-0.3.0.bazel  BUILD.flate2-1.0.26.bazel  BUILD.gl_generator-0.14.0.bazel  BUILD.glutin-0.30.9.bazel  BUILD.glutin-winit-0.3.0.bazel  BUILD.glutin_egl_sys-0.5.0.bazel  BUILD.glutin_glx_sys-0.4.0.bazel  BUILD.glutin_wgl_sys-0.4.0.bazel  BUILD.hashbrown-0.12.3.bazel  BUILD.indexmap-1.9.3.bazel  BUILD.instant-0.1.12.bazel  BUILD.jobserver-0.1.26.bazel  BUILD.js-sys-0.3.64.bazel  BUILD.khronos_api-3.1.0.bazel  BUILD.libc-0.2.146.bazel  BUILD.libloading-0.7.4.bazel  BUILD.libloading-0.8.0.bazel  BUILD.memchr-2.5.0.bazel  BUILD.memmap2-0.5.10.bazel  BUILD.miniz_oxide-0.7.1.bazel  BUILD.mio-0.8.8.bazel  BUILD.ndk-0.7.0.bazel  (+56 more)
client/: .BUILD.bazel.swp  .BUILD.swp  .Cargo.lock.swp  .Cargo.toml.swp  .build.rs.swp  .main.rs.swp  BUILD  build.rs
client/src/: .final_main.rs.swp  .main.rs.swj  .main.rs.swk  .main.rs.swl  .main.rs.swm  .main.rs.swn  .main.rs.swo  .main.rs.swp  .other_main.rs.swp  final_main.rs  main.rs  other_main.rs
client/src/common/: .BUILD.bazel.swp  .allocator.rs.swp  .app_context.rs.swp  .ecs.rs.swp  .ecs_proc_macro.rs.swp  .ecs_proc_macro.rs:32:25.swp  .key_manager.rs.swp  BUILD.bazel  allocator.rs  app_context.rs  ecs.rs  ecs_proc_macro.rs  key_manager.rs
client/src/common/test/: .allocator_test.rs.swp  .ecs_test.rs.swp  allocator_test.rs  ecs_test.rs
client/src/physx/: .physics_engine.rs.swp  physics_engine.rs
client/src/render/: .BUILD.swp  .gl_context.rs.swp  .gl_error.rs.swp  .gl_utils.rs.swp  .key_manager.rs.swp  .shader.rs.swa  .shader.rs.swb  .shader.rs.swc  .shader.rs.swd  .shader.rs.swe  .shader.rs.swf  .shader.rs.swg  .shader.rs.swh  .shader.rs.swi  .shader.rs.swj  .shader.rs.swk  .shader.rs.swl  .shader.rs.swm  .shader.rs.swn  .shader.rs.swo  .shader.rs.swp  .texture.rs.swp  .vbo.rs.swp  .window.rs.swh  .window.rs.swi  .window.rs.swj  .window.rs.swk  .window.rs.swl  .window.rs.swm  .window.rs.swn  .window.rs.swo  .window.rs.swp  BUILD  gl_context.rs  gl_error.rs  gl_utils.rs  key_manager.rs  shader.rs  texture.rs  vbo.rs  (+1 more)
client/src/render/drawable/: .drawable.rs.swp  .sprite_drawable.rs.swp  .sprite_manager.rs.swp  .triangle_drawable.rs.swp  drawable.rs  sprite_drawable.rs  sprite_manager.rs  triangle_drawable.rs
client/src/render/geometry/: .BUILD.swp  .geometry.rs.swp  .material.rs.swp  .mesh.rs.swp  BUILD  geometry.rs  material.rs  mesh.rs
client/src/render/shaders/: .basic_shader.rs.swp  .default_shader.rs.swp  .mesh_shader.rs.swp  basic_shader.rs  default_shader.rs  mesh_shader.rs
editor/: .BUILD.bazel.swp  .editor.py.swp  .main.py.swp  .sprite.py.swp  BUILD.bazel  editor.py  sprite.py
editor/tool/: .mesh_tool.py.swp  .vertex_tool.py.swp  mesh_tool.py  vertex_tool.py
editor/ui/: .main.ui.swp  main.ui  main.ui.autosave
