[package]
name = "galaga_client"
version = "0.0.0"


[[bin]]
name = "main"
path = "client/src/main.rs"
required-features = ["egl"]


[package.metadata.raze]
workspace_path = "//cargo"
genmode = "Vendored"
package_aliases_dir = "cargo"
default_gen_buildrs = true
targets = [
    "x86_64-unknown-linux-gnu",
]

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"

[package.metadata.raze.crates.sctk-adwaita.'*']
compile_data_attr = "glob([\"**/*.ttf\"])"

[package.metadata.raze.crates.khronos_api.'*']
data_attr = "glob([\"**/*.xml\",\"**/*.idl\"])"
compile_data_attr = "glob([\"**/*.xml\",\"**/*.idl\"])"
#data_attr = "glob([\"**/*.xml\"])"
#compile_data_attr = "glob([\"**/*.xml\"])"



[package.metadata.raze.crates.wayland-client.'*']
data_attr = "glob([\"**\"])"
compile_data_attr = "glob([\"**\"])"

[package.metadata.raze.crates.wayland-protocols.'*']
data_attr = "glob([\"**\"])"
compile_data_attr = "glob([\"**\"])"

[package.metadata.raze.crates.wayland-protocols-wlr.'*']
data_attr = "glob([\"**\"])"
compile_data_attr = "glob([\"**\"])"

[dependencies]
winit = {}
glutin = {default-features=false}
glutin-winit = {default-features=false}
raw-window-handle = "0.5.0"
png = { version = "0.17.6", optional = true }
quote = {}
syn = { version = "1.0.86", features = ["full"] }
glam = "0.24.1"

[build-dependencies]
gl_generator = {}
cfg_aliases = {}
khronos_api = {}


[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin-winit/egl", "png"]
glx = ["glutin-winit/glx"]
wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = ["glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]
