load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix galaga/assets_go
gazelle(name = "gazelle")

go_library(
    name = "assets_go_lib",
    srcs = ["asset_gen.go"],
    importpath = "galaga/assets_go",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "assets_go",
    embed = [":assets_go_lib"],
    visibility = ["//visibility:public"],
)
