load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_proc_macro(
    name = "ecs_proc_macro",
    srcs = ["ecs_proc_macro.rs"],
    deps = [
        "//cargo:proc_macro2",
        "//cargo:quote",
        "//cargo:syn",
    ],
)

rust_library(
    name = "ecs",
    srcs = ["ecs.rs"],
)

rust_library(
    name = "app_context",
    srcs = ["app_context.rs"],
    deps = [
        ":key_manager",
        "//cargo:glutin",
        "//cargo:glutin_winit",
        "//cargo:raw_window_handle",
        "//cargo:winit",
        "//client/src/render:gl_context",
    ],
)

rust_library(
    name = "key_manager",
    srcs = ["key_manager.rs"],
    deps = [
        "//cargo:glutin",
        "//cargo:glutin_winit",
        "//cargo:winit",
    ],
)

rust_library(
    name = "allocator",
    srcs = ["allocator.rs"],
    deps = [],
)

rust_test(
    name = "ecs_test",
    srcs = ["test/ecs_test.rs"],
    proc_macro_deps = [
        ":ecs_proc_macro",
    ],
    deps = [":ecs"],
)

rust_test(
    name = "allocator_test",
    srcs = ["test/allocator_test.rs"],
    deps = [":allocator"],
)
